--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@reduxjs/toolkit": "^2.10.1",
     "expo": "~54.0.22",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -29,14 +32,19 @@
     "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
