--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
+    "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -43,6 +44,7 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
+    "reactotron-react-native": "^5.1.18",
     "redux-persist": "^6.0.0",
     "zod": "^3.25.76"
   },
