--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.10.1",
     "expo": "~54.0.22",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.7",
     "expo-router": "~6.0.14",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -36,6 +38,7 @@
     "react-hook-form": "^7.66.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
@@ -47,6 +50,7 @@
     "react-redux": "^9.2.0",
     "reactotron-react-native": "^5.1.18",
     "redux-persist": "^6.0.0",
+    "uninstall": "^0.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
